--- a/site.css
+++ b/site.css
@@ -16,7 +16,7 @@ body {
   width: 600px;
   display: block;
   position: absolute;
-  color: #34495E;
+  color: #333;
   top: 0;
   bottom: 0;
   left: 0;
